5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4372/executions/1633_2944.log
== TEST (2019-04-02 18:12:03) 
-- CODE:
print("10")
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:12:13) 
-- CODE:
print("10 panquecas")
-- OUTPUT:
10 panquecas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:17:47) 
-- CODE:
print("10 panquecas")
print(1*10)
-- OUTPUT:
10 panquecas
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:20) 
-- CODE:
print("10 panquecas")
input(1*10)

-- OUTPUT:
10 panquecas
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:54) 
-- CODE:
print("10 panquecas")
input(1*10)
input(180*10)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    input(180*10)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:19:43) 
-- CODE:
print("10 panquecas")
input(1*10)
input(180*10)
input(110*10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    input(180*10)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:19:54) 
-- CODE:
print("10 panquecas")
input(1*10)
input(180*10)
input(110*10)
-- EXECUTION TIME:
0.262155
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2944/main.py", line 3, in <module>
    input(180*10)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:00) 
-- CODE:
print("10 panquecas")
input(1*10)
input(180*10)
input(110*10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    input(180*10)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:23) 
-- CODE:
print1 ("10 panquecas")
input(1*10)
input(180*10)
input(110*10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print1 ("10 panquecas")
NameError: name 'print1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:29) 
-- CODE:
print1("10 panquecas")
input(1*10)
input(180*10)
input(110*10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print1("10 panquecas")
NameError: name 'print1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:34) 
-- CODE:
print("10 panquecas")
input(1*10)
input(180*10)
input(110*10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    input(180*10)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:20:53) 
-- CODE:
print("10 panquecas")
input(1*10)
input(180*10)
input(110*10)
-- EXECUTION TIME:
0.144114
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2944/main.py", line 3, in <module>
    input(180*10)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:21:29) 
-- CODE:
print("8 panquecas")
input(1*8)
input(180*8)
input(110*8)
-- EXECUTION TIME:
0.231463
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2944/main.py", line 3, in <module>
    input(180*8)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:21:31) 
-- CODE:
print("8 panquecas")
input(1*8)
input(180*8)
input(110*8)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    input(180*8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:21:38) 
-- CODE:
print("8 panquecas")
input(1*8)
input(180*8)
input(110*8)
-- EXECUTION TIME:
0.122929
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2944/main.py", line 3, in <module>
    input(180*8)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:21:40) 
-- CODE:
print("8 panquecas")
input(1*8)
input(180*8)
input(110*8)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    input(180*8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:22:25) 
-- CODE:
print("8 panquecas")
input(1*8)
input(180*8)
input(110*8)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    input(180*8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:22:47) 
-- CODE:
print("8 panquecas")
input1(1*8)
input2(180*8)
input3(110*8)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input1(1*8)
NameError: name 'input1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:23:10) 
-- CODE:
print("8 panquecas")
input(1*8)
input(180*8)
input(110*8)
-- EXECUTION TIME:
0.185523
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2944/main.py", line 3, in <module>
    input(180*8)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:23:12) 
-- CODE:
print("8 panquecas")
input(1*8)
input(180*8)
input(110*8)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    input(180*8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:23:45) 
-- CODE:
print("8 panquecas")
print("ovos") input(1*8)
input(180*8)
input(110*8)
-- ERROR:
File "XXXX", line 2
    print("ovos") input(1*8)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:24:00) 
-- CODE:
print("8 panquecas")
print(input(1*8))
input(180*8)
input(110*8)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    input(180*8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:24:13) 
-- CODE:
print("8 panquecas")
print(input(1*8))
input(180*8)
input(110*8)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    input(180*8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:24:52) 
-- CODE:
print("8 panquecas")
print(input(1*8))
print(input(180*8)
print(input(110*8)
-- ERROR:
File "XXXX", line 4
    print(input(110*8)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:35:00) 
-- CODE:
print("8 panquecas")
(input(1*8))
(input(180*8)
(input(110*8)
-- ERROR:
File "XXXX", line 5
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:35:13) 
-- CODE:
print("8 panquecas")
(input(1*8)
(input(180*8)
(input(110*8)
-- ERROR:
File "XXXX", line 5
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:35:45) 
-- CODE:
print("8 panquecas")
print((input(1*8))
print((input(180*8))
print((input(110*8))
-- ERROR:
File "XXXX", line 3
    print((input(180*8))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:35:48) 
-- CODE:
print("8 panquecas")
print((input(1*8))
print((input(180*8))
print((input(110*8))
-- EXECUTION TIME:
0.130052
-- ERROR:
  File "/home/codebench/codes/1633/2944/main.py", line 3
    print((input(180*8))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:36:53) 
-- CODE:
print("8 panquecas")
print((input(1 * 8))
print((input(180 * 8))
print((input(110 * 8))
-- ERROR:
File "XXXX", line 3
    print((input(180 * 8))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:36:56) 
-- CODE:
print("8 panquecas")
print((input(1 * 8))
print((input(180 * 8))
print((input(110 * 8))
-- EXECUTION TIME:
0.19076
-- ERROR:
  File "/home/codebench/codes/1633/2944/main.py", line 3
    print((input(180 * 8))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:38:26) 
-- CODE:
print("8 panquecas")

-- OUTPUT:
8 panquecas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:39:42) 
-- CODE:
print("10 panquecas")
input(1 * 10)
-- OUTPUT:
10 panquecas
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:40:39) 
-- CODE:
print("10 panquecas")
input(1 * 10)
input(180 * 10)
input(110 * 10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    input(180 * 10)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:56) 
-- CODE:
print("10 panquecas")
input(1 * 10)
input(180 * 10)
input(110 * 10)
-- EXECUTION TIME:
0.228832
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2944/main.py", line 3, in <module>
    input(180 * 10)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:41:31) 
-- CODE:
print("10 panquecas")
print("ovos")
input(1 * 10)
input(180 * 10)
input(110 * 10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    input(180 * 10)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:41:55) 
-- CODE:
print("10 panquecas")
print("ovos")input(1 * 10)
input(1 * 10)
input(180 * 10)
input(110 * 10)
-- ERROR:
File "XXXX", line 2
    print("ovos")input(1 * 10)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:42:22) 
-- CODE:
print("10 panquecas")
input(1 * 10)print("ovos")
input(1 * 10)
input(180 * 10)
input(110 * 10)
-- ERROR:
File "XXXX", line 2
    input(1 * 10)print("ovos")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:42:40) 
-- CODE:
print("10 panquecas")
input(1 * 10)
input(180 * 10)
input(110 * 10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    input(180 * 10)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:43:00) 
-- CODE:
print("10 panquecas")
input(1 * 10)
input(180 * 10)
input(110 * 10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    input(180 * 10)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:30) 
-- CODE:
print("10 panquecas")
input(1 * 10)
input(180 * 10)
input(110 * 10)
-- EXECUTION TIME:
0.155972
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2944/main.py", line 3, in <module>
    input(180 * 10)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:28) 
-- CODE:
print("10 panquecas")
input(1 * 10)
input(180 * 10)
input(110 * 10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    input(180 * 10)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:45:04) 
-- CODE:
print("10 panquecas")
input(1 * 10)
input(180 * 10)
input(110 * 10)
-- EXECUTION TIME:
0.209491
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2944/main.py", line 3, in <module>
    input(180 * 10)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:45:11) 
-- CODE:
print("10 panquecas")
input(1 * 10)
input(180 * 10)
input(110 * 10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    input(180 * 10)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:45:24) 
-- CODE:
print("10 panquecas")
input(1 * 10)
input(180 * 10)
input(110 * 10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    input(180 * 10)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:13) 
-- CODE:
print("10 panquecas")
input(1 * 10)
input(180 * 10)
input(110 * 10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    input(180 * 10)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:47:18) 
-- CODE:
print("16 panquecas")
input(1 * 2 )
input(180 * 2 )
input(110 * 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    input(180 * 2 )
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:47:24) 
-- CODE:
print("16 panquecas")
input(1 * 2 )
input(180 * 2 )
input(110 * 2)
-- EXECUTION TIME:
0.214903
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2944/main.py", line 3, in <module>
    input(180 * 2 )
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:47:26) 
-- CODE:
print("16 panquecas")
input(1 * 2 )
input(180 * 2 )
input(110 * 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    input(180 * 2 )
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:47:44) 
-- CODE:
print("16 panquecas")
input(1 * 2 )
input(180 * 2 )
input(110 * 2)
-- EXECUTION TIME:
0.152369
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2944/main.py", line 3, in <module>
    input(180 * 2 )
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
